[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/Levels.gd" type="Script" id=1]
[ext_resource path="res://Levels/Assets/layers/Nebula Red.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NebulaRed" type="Sprite" parent="."]
position = Vector2( 504, 123 )
scale = Vector2( 0.561035, 0.561035 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 124.0
margin_top = 236.0
margin_right = 224.0
margin_bottom = 336.0
alignment = 1

[node name="Level 1" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../../VBoxContainer7/Level 7")
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 1"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 236.0
margin_top = 236.0
margin_right = 336.0
margin_bottom = 336.0
alignment = 1

[node name="Level 2" type="Button" parent="VBoxContainer2"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 2"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 348.0
margin_top = 236.0
margin_right = 448.0
margin_bottom = 336.0
alignment = 1

[node name="Level 3" type="Button" parent="VBoxContainer3"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 3"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
margin_left = 460.0
margin_top = 236.0
margin_right = 560.0
margin_bottom = 336.0
alignment = 1

[node name="Level 4" type="Button" parent="VBoxContainer4"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 4"

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
margin_left = 572.0
margin_top = 236.0
margin_right = 672.0
margin_bottom = 336.0
alignment = 1

[node name="Level 5" type="Button" parent="VBoxContainer5"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 5"

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
margin_left = 684.0
margin_top = 236.0
margin_right = 784.0
margin_bottom = 336.0
alignment = 1

[node name="Level 6" type="Button" parent="VBoxContainer6"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 6"

[node name="VBoxContainer7" type="VBoxContainer" parent="."]
margin_left = 796.0
margin_top = 236.0
margin_right = 896.0
margin_bottom = 336.0
alignment = 1

[node name="Level 7" type="Button" parent="VBoxContainer7"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_neighbour_right = NodePath("../../VBoxContainer/Level 1")
focus_neighbour_bottom = NodePath("../../Back/Back")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "N/A"

[node name="Back" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -36.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 2

[node name="Back" type="Button" parent="Back"]
margin_right = 100.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../VBoxContainer/Level 1")
focus_neighbour_bottom = NodePath("../../VBoxContainer7/Level 7")
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="VBoxContainer3/Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="VBoxContainer4/Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="VBoxContainer5/Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="VBoxContainer6/Level 6" to="." method="_on_Level_6_pressed"]
[connection signal="pressed" from="VBoxContainer7/Level 7" to="." method="_on_Level_7_pressed"]
[connection signal="pressed" from="Back/Back" to="." method="_on_Back_pressed"]
